--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,14 +20,25 @@ h1 {
   letter-spacing: -0.025em;
 }
 
+h2 {
+  color: #222;
+  font-size: 18px;
+  padding-top: 2px;
+  padding-bottom: 8px;
+  letter-spacing: -0.025em;
+}
+
 h3 {
   font-size: 18px;
   color: #404040;
   padding-top: 8px;
   line-height: 1.222;
   display: inline-block;
-  border-bottom: 3px solid #bb1919;
   font-weight: 400;
+}
+
+.main-headline h3 {
+  border-bottom: 3px solid #bb1919;
 }
 
 hr {
@@ -35,8 +46,9 @@ hr {
   height: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  width: 96%;
-  margin-left: 2%;
+  width: 95%;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
 }
 
 ul {
@@ -47,15 +59,28 @@ a {
   text-decoration: none;
 }
 
-.story-link a {
+.story-link a,
+.story-footnote-link a,
+.mini-story-caption a,
+#ces-heading a,
+.ces-story a,
+#also-heading {
   color: #222;
 }
-.story-link a:visited {
+.story-link a:visited,
+.story-caption a:visited,
+.mini-story-caption a:visited,
+#ces-heading a:visited,
+.ces-story a:visited {
   color: #686868;
 }
 
-.story-link a:hover {
-  color: #1167a8;
+.story-caption a {
+  color: #222;
+}
+
+iframe {
+  border: none;
 }
 
 figure {
@@ -65,8 +90,11 @@ figure {
 figcaption {
   color: #5a5a5a;
   font-size: 15px;
-  padding-top: 8px;
   line-height: 1.2em;
+}
+
+figcaption#main-caption {
+  padding-top: 8px;
 }
 
 /* Header */
@@ -228,16 +256,25 @@ nav a {
   background-color: #bb1919;
 }
 
-.main-headline {
-  width: 96%;
-  margin-left: 2%;
+#news-logo {
+  width: 108px;
+  height: 26px;
+  margin-top: 15px;
+  margin-left: 10px;
+}
+
+.main-headline,
+.headline {
+  width: 95%;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
 }
 
 #main-headline {
   padding-top: 12px;
 }
 
-img#asda-sign {
+img.story-img {
   display: block;
   max-width: 100%;
   padding-top: 13px;
@@ -278,9 +315,113 @@ img#asda-sign {
 
 .story-footnote-link {
   padding-top: 8px;
+  font-size: 14px;
 }
 
-.story-footnote-link a {
+.story-footnote-link a:visited {
   color: #686868;
-  font-size: 14px;
+}
+
+.story-link a:hover,
+.story-caption a:hover,
+.story-footnote-link a:hover,
+.mini-story-caption a:hover,
+#ces-heading a:hover,
+.ces-story a:hover {
+  color: #1167a8;
+}
+
+/* Main */
+
+img#twitter-img,
+img#drone-img {
+  padding-top: 10px;
+  min-width: 100%;
+}
+
+.mini-story-caption {
+  padding-top: 12px;
+}
+
+.mini-story-footnote {
+  margin-bottom: 10px;
+}
+
+#last-mini-story-footnote {
+  margin-bottom: 32px;
+}
+
+/* CES */
+
+#ces-heading,
+#also-heading {
+  width: 95%;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+#ces-heading {
+  margin: 22px 2.5% 15px;
+}
+
+#also-heading {
+  margin: 20px 2.5% 10px;
+}
+
+.ces-story {
+  font-size: 15px;
+  font-weight: 700;
+  padding-top: 0;
+}
+
+.iframe-wrapper {
+  width: 95%;
+  margin: 0 2.5% 15px;
+}
+
+#ces {
+  margin-bottom: 32px;
+}
+
+/* Also */
+
+#also {
+  margin-bottom: 32px;
+}
+
+#also-heading {
+  letter-spacing: 0;
+}
+
+#hawking-img,
+#snoop-img {
+  max-width: 100%;
+}
+
+.also-story {
+  margin-bottom: 17px;
+}
+
+.also-caption {
+  padding-top: 2px;
+  padding-bottom: 4px;
+}
+
+#newsbeat-badge {
+  text-transform: uppercase;
+  display: inline-block;
+  color: #fff;
+  background-color: #4d2c7a;
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 1;
+  margin-top: -0.25em;
+  vertical-align: middle;
+  padding: 0.25em 0.25em 0.16em;
+}
+
+/* Footer */
+
+footer {
+  height: 100vh;
 }
