--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,7 @@ body, body * {
 body {
   display: block;
   font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
 body,
@@ -430,7 +431,8 @@ img#drone-img {
 #follow-heading,
 #elsewhere-heading,
 #podcasts-heading,
-#more-heading {
+#more-heading,
+#secondary-footer-heading {
   width: 95%;
   font-size: 20px;
   font-weight: 400;
@@ -449,7 +451,8 @@ img#drone-img {
 #follow-heading,
 #elsewhere-heading,
 #podcasts-heading,
-#more-heading {
+#more-heading,
+#secondary-footer-heading {
   margin: 20px 2.5% 10px;
 }
 
@@ -475,7 +478,8 @@ img#drone-img {
 #click,
 #special-reports,
 #elsewhere,
-#podcasts {
+#podcasts,
+main {
   margin-bottom: 32px;
 }
 
@@ -488,7 +492,8 @@ img#drone-img {
 #follow-heading,
 #elsewhere-heading,
 #podcasts-heading,
-#more-heading {
+#more-heading,
+#secondary-footer-heading {
   letter-spacing: 0;
 }
 
@@ -947,5 +952,199 @@ tbody td a {
 /* Footer */
 
 footer {
-  height: 100vh;
+  background-color: #4c4c4c;
+}
+
+footer h2 {
+  color: #fff;
+  opacity: 0.9;
+}
+
+#secondary-footer {
+  background-color: #2f2f2f;
+}
+
+#secondary-footer-heading {
+  padding-top: 24px;
+  margin-top: 0;
+}
+
+article {
+  border-top: 1px solid #949494;
+}
+
+article h2 {
+  padding-top: 24px;
+  width: 95%;
+  margin: 0 auto;
+  font-size: 20px;
+  line-height: 24px;
+  opacity: 1;
+  letter-spacing: 0;
+  padding-bottom: 22px;
+}
+
+#news-services-list {
+  padding-bottom: 8px;
+}
+
+.news-services-list-item {
+  padding-left: 36px;
+  padding-bottom: 22px;
+  font-weight: 700;
+  line-height: 1.28571;
+  min-height: 26px;
+}
+
+.news-services-list-item a {
+  font-size: 14px;
+  color: #fff;
+  opacity: 0.9;
+}
+
+.news-services-list-item a:hover {
+  text-decoration: underline;
+}
+
+.slider {
+  width: 95%;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+}
+
+.slides {
+  display: flex;
+  overflow-x: auto;
+  overflow-y: hidden;
+  background-color: #4c4c4c;
+  -webkit-overflow-scrolling: touch;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+
+.slides::-webkit-scrollbar {
+  /* width: 10px; */
+  height: 5px;
+}
+
+.slides::-webkit-scrollbar-thumb {
+  background-color: #FFFFFF;
+}
+
+.slides::-webkit-scrollbar-track {
+  background-color: #1C1C1C;
+}
+
+@supports (scroll-snap-type) {
+  .slider > a {
+    display: none;
+  }
+}
+
+.slides > div {
+  scroll-snap-align: start;
+  width: 266px;
+  flex-shrink: 0;
+  height: 255px;
+  background-color: #333333;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  transform-origin: center center;
+  margin-bottom: 1pc;
+}
+
+.slides > div:hover {
+  background: #222;
+  transition: background-color 500ms ease-in-out;
+}
+
+.buttons-wrapper {
+  position: absolute;
+  z-index: 1;
+  right: 0;
+  top: 60px;
+  display: flex;
+  width: 80px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttons-wrapper a {
+  width: 35px;
+  height: 35px;
+  background-color: #fff;
+  /* display: block; */
+  margin-left: 3px;
+  margin-bottom: 3px;
+  text-align: center;
+  position: relative;
+  padding-top: 10px;
+  color: #4c4c4c;
+  transition: all 200ms ease-in-out;
+}
+
+.buttons-wrapper:hover > * {
+  opacity: 0.8;
+  background: #4c4c4c;
+  color: #fff;
+}
+
+.buttons-wrapper:hover > *:hover {
+  background: #fff;
+  color: #4c4c4c;
+  opacity: 1;
+}
+
+.buttons-wrapper {
+  pointer-events: none;
+}
+
+.buttons-wrapper > * {
+  pointer-events: auto;
+}
+
+.buttons-wrapper a:hover {
+  border: 1px solid #fff;
+}
+
+.buttons-wrapper a:active {
+  background: #4c4c4c;
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.slide:not(:last-child) {
+  margin-right: 8px;
+}
+
+.slide img {
+  padding-top: 0;
+}
+
+.slide span.iplayer-icon {
+  position: absolute;
+  top: 103.95px;
+  left: -5px;
+}
+
+.slide h3 {
+  padding: 13px 16px 0;
+  margin-bottom: 20px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: .5px;
+}
+
+.slide h4 {
+  padding-top: 0;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #bbb;
+  font-weight: 400;
+  letter-spacing: .5px;
 }
